<?xml version="1.0" encoding="utf-8"?>
<GridLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/summary_background"
    tools:context="edu.orangecoastcollege.cs273.bwegener.inandout.SummaryActivity">


    <TextView
        android:id="@+id/orderTotalTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="150dp"
        android:layout_row="0"
        android:text="@string/order_total_tv"
        android:textSize="35sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/itemsOrderedTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="80dp"
        android:layout_row="1"
        android:text="@string/items_ordered_tv"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/subtotalTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="2dp"
        android:layout_row="2"
        android:text="@string/subtotal_tv"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/taxTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="2dp"
        android:layout_row="3"
        android:text="@string/tax_tv"
        android:textSize="20sp"/>

    <Button
        android:id="@+id/newOrderButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="50dp"
        android:layout_row="4"
        android:onClick="goToOrder"
        android:padding="15dp"
        android:text="@string/start_order_button"
        android:textSize="18sp"/>
</GridLayout>
